# cpp-elmish

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  meson.build
src/: CMakeLists.txt  elmish.h  main.cpp  meson.build  overloaded.h
src/actions/: app_actions.h  camera_actions.h  count_actions.h
src/models/: app_model.h  camera_model.h  count_model.h
src/reducers/: app_reducers.h  camera_reducers.h  count_reducers.h
subprojects/fmt/: meson.build
